--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nestjs/testing": "^6.0.0",
     "@types/express": "^4.16.0",
     "@types/jest": "^23.3.13",
+    "@types/mongoose": "^5.5.6",
     "@types/node": "^10.12.18",
     "@types/supertest": "^2.0.7",
     "concurrently": "^4.1.0",
